--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -12,7 +12,16 @@
     <body>
         {% block body %}{% endblock %}
         {% block javascripts %}
+            <!-- AngularJS -->
             <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
+
+            <!-- Firebase -->
+            <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
+
+            <!-- AngularFire -->
+            <script src="https://cdn.firebase.com/libs/angularfire/1.1.3/angularfire.min.js"></script>
+
+            <!-- custom app script -->
             <script src="{{ asset('assets/js/app.js') }}"></script>
         {% endblock %}
     </body>
