--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -22,6 +22,7 @@
             <script src="https://cdn.firebase.com/libs/angularfire/1.1.3/angularfire.min.js"></script>
 
             <!-- custom app script -->
+            <script src="{{ asset('assets/js/ng-file-upload.min.js') }}"></script>
             <script src="{{ asset('assets/js/app.js') }}"></script>
         {% endblock %}
     </body>
