added structure for content body

--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -3,7 +3,9 @@
 {% block body %}
 {% verbatim %}
 <div class="container-fluid" ng-app="App" ng-controller="AppController">
-    
+    <section class="image-feed container-fluid">
+
+    </section>
 </div>
 {% endverbatim %}
 {% endblock %}
